--- a/examples/example.html
+++ b/examples/example.html
@@ -16,18 +16,18 @@
   <body>
     <div id="app"></div>
 
-    <script src="node_modules/blockml/token.js"></script>
-    <script src="node_modules/blockml/lexer.js"></script>
-    <script src="node_modules/blockml/empty-node.js"></script>
-    <script src="node_modules/blockml/block-node.js"></script>
-    <script src="node_modules/blockml/string-node.js"></script>
-    <script src="node_modules/blockml/attribute-node.js"></script>
-    <script src="node_modules/blockml/comment-node.js"></script>
-    <script src="node_modules/blockml/parser.js"></script>
-    <script src="node_modules/blockml/index.js"></script>
+    <script src="../node_modules/blockml/token.js"></script>
+    <script src="../node_modules/blockml/lexer.js"></script>
+    <script src="../node_modules/blockml/empty-node.js"></script>
+    <script src="../node_modules/blockml/block-node.js"></script>
+    <script src="../node_modules/blockml/string-node.js"></script>
+    <script src="../node_modules/blockml/attribute-node.js"></script>
+    <script src="../node_modules/blockml/comment-node.js"></script>
+    <script src="../node_modules/blockml/parser.js"></script>
+    <script src="../node_modules/blockml/index.js"></script>
 
-    <script src="vdom.js"></script>
-    <script src="index.js"></script>
+    <script src="../vdom.js"></script>
+    <script src="../index.js"></script>
 
     <script type="text/javascript">
       component('Page', {
@@ -50,24 +50,21 @@
         render: function (props, children) {
           return `
             Page {
-              h1 onclick: "${this.handleClick}" {
+              h1 {
                 "Hello World"
               }
               br;
-              button onclick: "${component.bind(this, this.handleClick)}" {
+              button onclick: "${this._handleClick}" {
                 "Click ME"
+                "${props.name}"
               }
               ${children}
             }
           `;
         },
 
-        onLoad: function() {
-
-        },
-
-        handleClick: function (event) {
-          console.log('click', this, event);
+        _handleClick: function (event, props) {
+          props.name = 'your app';
         }
       });
 
